tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore_second.stderr
error: Expected identifier
 --> tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore_second.rs:4:22
  |
4 | #[iteration_order(A, _, C)]
  |                      ^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore_second.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore_second.rs`
