tests/compilation_failure_tests/iteration_order/malformed_non_ident_underscore_second.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
#[iteration_order(A, _, C)]
enum Enum {
    A, B, C
}
